--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "ngx-toastr": "^11.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "xng-breadcrumb": "^6.7.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
