--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "bootstrap": "^4.6.0",
+    "bootswatch": "^5.0.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^11.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
